kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matofi-postgres
  namespace: matofi
  labels:
    app: matofi-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matofi-postgres
  template:
    metadata:
      labels:
        app: matofi-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:14
        imagePullPolicy: Always
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: postgres-storage
            mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
