kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matofi-frontend-service
  namespace: matofi
spec:
  selector:
    app: matofi-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
