kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matofi-postgres
  namespace: matofi
spec:
  selector:
    app: matofi-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
