kubernetes/matofi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matofi-ingress
  namespace: matofi
  annotations:
    kubernetes.io/ingress.class: "nginx"  # Ajustar si tu controller usa otra clase
spec:
  # Sección TLS que asocia el dominio con el Secret TLS
  tls:
    - hosts:
      - matofi.fundacio-puigvert.es
      secretName: fundacio-puigvert.es  # Nombre del Secret TLS en namespace matofi

  rules:
  - host: matofi.fundacio-puigvert.es
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: matofi-backend-service
            port:
              number: 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: matofi-frontend-service
            port:
              number: 80
